--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starter template for future projects",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "stasrt": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
